--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
             <div class="offset-md-2 col-lg-5 col-md-7 offset-md-3">
                 <div class="panel border bg-white">
                     <div class="panel-heading">
-                        <h3 class="pt-3 font-weight-bold">Login</h3>
+                        <h3 class="pt-3 font-weight-bold">Loginn</h3>
                     </div>
                     <div class="panel-body p-3">
                         <form>
